[project]
name = "na-parkaccess"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "streamlit>=1.30,<2.0",
    "streamlit_folium>=0.11,<1.0",

    "osmnx>=2.0.7,<3.0.0",
    "networkx>=3.2,<4.0",

    "geopandas>=0.14,<1.0",
    "shapely>=2.0,<2.1",
    "pyproj>=3.6,<3.7",
    "fiona>=1.9,<1.10",
    "rtree>=1.1,<1.3",

    "scikit-learn>=1.3,<1.5",
    "scipy>=1.11,<1.13",

    "requests>=2.31,<3.0",
    "matplotlib>=3.8,<3.9"
]

[tool.poetry]
packages = [{include = "na_parkaccess", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
